# amazon-bedrock-knowledge-base

./: .gitignore  README.md  pyproject.toml
infra/: backend.tf  data.tf  iam-policy.tf  iam-roles.tf  main.tf  oss-policy.tf  outputs.tf  providers.tf  variables.tf  version.tf
knowledge_base/: main.py  operations.py
