[tool.poetry]
name = "amazon-bedrock-knowledge-base"
version = "0.1.0"
description = ""
authors = ["Ankit Jain"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
antlr4-python3-runtime = "^4.13.1"
pytest = "^8.0.2"
opensearch-py = "2.3.1"
boto3 = "^1.34.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
